--- a/CryptoCurrencyMarket/Main.storyboard
+++ b/CryptoCurrencyMarket/Main.storyboard
@@ -283,15 +283,60 @@
                                 <color key="tintColor" red="0.1289955941" green="0.16854360239999999" blue="0.20804323189999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.1289955941" green="0.16854360239999999" blue="0.20804323189999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="JWZ-gr-Aup">
-                                        <rect key="frame" x="0.0" y="28" width="394" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookCell" rowHeight="121" id="JWZ-gr-Aup" customClass="BookCell" customModule="CryptoCurrencyMarket" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="394" height="121"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JWZ-gr-Aup" id="cii-PL-ld2">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="121"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999.99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Frd-Sd-BUt">
+                                                    <rect key="frame" x="10" y="47" width="100" height="27"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="x50-SK-hEg"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbD-sJ-U9Y">
+                                                    <rect key="frame" x="284" y="47" width="100" height="27"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="Wak-YA-fLe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Gf6-tk-n0o">
+                                                    <rect key="frame" x="110" y="59.5" width="174" height="2"/>
+                                                    <color key="progressTintColor" red="0.47787906790000001" green="0.62848368870000004" blue="0.77353869819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </progressView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.1124119646" green="0.13064590770000001" blue="0.18436285620000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="Gf6-tk-n0o" firstAttribute="centerY" secondItem="cii-PL-ld2" secondAttribute="centerY" id="Lz9-6I-kO1"/>
+                                                <constraint firstItem="Gf6-tk-n0o" firstAttribute="leading" secondItem="Frd-Sd-BUt" secondAttribute="trailing" id="Woi-O8-WgX"/>
+                                                <constraint firstItem="Frd-Sd-BUt" firstAttribute="centerY" secondItem="cii-PL-ld2" secondAttribute="centerY" id="bsc-kG-DMi"/>
+                                                <constraint firstItem="xbD-sJ-U9Y" firstAttribute="leading" secondItem="Gf6-tk-n0o" secondAttribute="trailing" id="kSB-Uv-7am"/>
+                                                <constraint firstItem="Frd-Sd-BUt" firstAttribute="leading" secondItem="cii-PL-ld2" secondAttribute="leading" constant="10" id="p3X-F5-q0L"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="xbD-sJ-U9Y" secondAttribute="trailing" constant="10" id="ajI-ZA-CYR"/>
+                                            <constraint firstItem="xbD-sJ-U9Y" firstAttribute="centerY" secondItem="JWZ-gr-Aup" secondAttribute="centerY" id="zDs-E6-j9V"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="amount" destination="xbD-sJ-U9Y" id="fNZ-Fv-ZPB"/>
+                                            <outlet property="count" destination="Gf6-tk-n0o" id="Obs-Zk-zec"/>
+                                            <outlet property="price" destination="Frd-Sd-BUt" id="YfZ-eq-cDr"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="NYg-Fl-Y9p" id="wgh-aa-Lbc"/>
+                                    <outlet property="delegate" destination="NYg-Fl-Y9p" id="Oox-56-zgV"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.1124119646" green="0.13064590770000001" blue="0.18436285620000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -307,10 +352,13 @@
                         <viewLayoutGuide key="safeArea" id="VpU-od-Rin"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Books" id="RDf-Wl-aj7"/>
+                    <connections>
+                        <outlet property="tableView" destination="Lth-ke-nkC" id="Wa9-Qe-Lt6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wQX-1G-GM1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-468" y="3"/>
+            <point key="canvasLocation" x="-468.11594202898556" y="2.6785714285714284"/>
         </scene>
         <!--General Tab View Controller-->
         <scene sceneID="N9q-Xx-3GA">
