--- a/CryptoCurrencyMarket/Main.storyboard
+++ b/CryptoCurrencyMarket/Main.storyboard
@@ -201,6 +201,7 @@
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1289955941" green="0.16854360239999999" blue="0.20804323189999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="1" green="0.9156742309" blue="0.23984834059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="5bW-xM-yJk" firstAttribute="leading" secondItem="EaG-yW-N6n" secondAttribute="leading" id="2uv-0G-x4a"/>
                                     <constraint firstItem="ncM-r0-Yln" firstAttribute="top" secondItem="EaG-yW-N6n" secondAttribute="top" id="4rI-dR-YL5"/>
